--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,6 +1,12 @@
+main {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
 .gallery {
   display: flex;
   flex-wrap: wrap;
+  padding-left: 0;
   list-style: none;
 }
 
