Add basicLightBox modal

--- a/src/templates/hits.hbs
+++ b/src/templates/hits.hbs
@@ -1,6 +1,11 @@
 {{#each this}}
   <li class='photo-card'>
-    <img src='{{webformatURL}}' alt='{{tags}}' />
+    <img
+      class='gallery__image'
+      src='{{webformatURL}}'
+      alt='{{tags}}'
+      data-source='{{largeImageURL}}'
+    />
 
     <div class='stats'>
       <p class='stats-item'>
