--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,7 +1,10 @@
+<h1 class="title">
+  Search images on <a class="title-link" href="https://pixabay.com">Pixabay.com</a>
+</h1>
 <form class="search-form" id="search-form">
   <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
 </form>
 <ul class="gallery"></ul>
 <button class="btn" type="button" data-action="load-more">
-  <span class="label">Load more...</span>
+  <span class="label">Load more</span>
 </button>
