--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,37 +1,94 @@
+body {
+  background-image: url('../images/bg.jpg');
+}
+
 main {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 20px;
 }
 
-.gallery {
-  display: flex;
-  flex-wrap: wrap;
-  padding-left: 0;
-  list-style: none;
+.title {
+  text-align: center;
+  color: white;
 }
 
-.photo-card {
-  width: 33.33%;
-}
-
-img {
-  width: 100%;
-}
-
-.btn {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 15px;
-
-  border-radius: 5px;
-  border: 0;
-
-  background-color: tomato;
+.title-link {
+  color: #ffdf05;
 }
 
 input {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.search-form {
+  margin-bottom: 20px;
+}
+
+.gallery {
+  list-style: none;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-left: 0;
+  margin-left: -20px;
+  margin-right: -20px;
+  margin-top: 0;
+}
+
+.photo-card {
+  max-width: 300px;
+
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+
+  border-radius: 5px;
+
+  color: white;
+  background-color: #303964;
+
+  overflow: hidden;
+}
+
+.gallery__image {
+  max-width: 100%;
+  display: block;
+  height: auto;
+
+  cursor: pointer;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover {
+    transform: scale(1.03);
+  }
+}
+
+.stats {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 10px;
+}
+
+.btn {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px;
+
+  border-radius: 5px;
+  border: 0;
+
+  background-color: #ffdf05;
+}
+
+.btn.is-hidden {
+  display: none;
+}
+
+.material-icons {
+  display: flex;
+  justify-content: center;
+  font-size: 24px;
 }
