--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -3,6 +3,7 @@
 </h1>
 <form class="search-form" id="search-form">
   <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
+  <button type="submit" class="btn">Search</button>
 </form>
 <ul class="gallery"></ul>
 <button class="btn" type="button" data-action="load-more">
